# hecr_diffusion

./: CMakeLists.txt  README.md
include/: DiffusionCoefficients.h  Trajectory.h
libs/crpropa/: CMakeLists.txt
libs/crpropa/include/crpropa/: Candidate.h  GridTools.h  ParticleState.h
libs/crpropa/include/crpropa/magneticField/: MagneticField.h
libs/crpropa/include/crpropa/module/: PropagationCK.h
libs/crpropa/src/: Candidate.cpp  Common.cpp  GridTools.cpp  ParticleID.cpp  ParticleMass.cpp  ParticleState.cpp
libs/crpropa/src/magneticField/: MagneticField.cpp
libs/crpropa/src/module/: PropagationCK.cpp
libs/kiss/: CMakeLists.txt
src/: DiffusionCoefficients.cpp  Trajectory.cpp  main.cpp
